# test-ICP

./: .gitignore  CMakeLists.txt  README.md
Dataset/input/: pc_dst.xyz  pc_src.xyz
app/: CMakeLists.txt  cv_icp_exp.cpp  exp_cv_icp.cpp  exp_cv_ppficp.cpp  exp_pcl_fpfhicp.cpp  exp_pcl_gicp.cpp  exp_pcl_icp.cpp  file_pcd2xyz.cpp  file_xyz2pcd.cpp  icp_exp_cv.cpp  icp_exp_pcl.cpp  pcl_icp.cpp  pcl_icp_exp.cpp  pcl_icp_random.cpp  test_gen_pcd.cpp  test_pcd2xyz.cpp  test_xyz2pcd.cpp
include/: cv_parser.h  cv_prepare.h  cv_register.h  pcd_xyz.h  pcl_parser.h  pcl_prepare.h  pcl_register.h
src/: cv_parser.cpp  cv_prepare.cpp  cv_register.cpp  pcd_xyz.cpp  pcl_parser.cpp  pcl_prepare.cpp  pcl_register.cpp
